--- a/res/layout/tab_fragment_map.xml
+++ b/res/layout/tab_fragment_map.xml
@@ -5,10 +5,11 @@
     android:orientation="vertical" 
     android:gravity="center">
     
-    <TextView 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/map"/>
+    <com.baidu.mapapi.map.MapView  
+    android:id="@+id/bmapView"  
+    android:layout_width="fill_parent"  
+    android:layout_height="fill_parent"  
+    android:clickable="true" />
     
 
 </LinearLayout>
