--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -4,9 +4,14 @@
     tools:context="com.zhenqianfan13354468.trackpedometer.MainActivity" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/it_back"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="后台运行"
+        app:showAsAction="never"/>
+    <item
+        android:id="@+id/it_exit"
+        android:orderInCategory="100"
+        android:title="退出应用"
         app:showAsAction="never"/>
 
 </menu>
