--- a/res/menu/submenu_map_setting.xml
+++ b/res/menu/submenu_map_setting.xml
@@ -1,30 +1,35 @@
-<?xml version="1.0" encoding="utf-8"?>  
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >  
+<?xml version="1.0" encoding="utf-8"?>
+<menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
-  <item
-      android:id="@+id/it_screenshot"
-      android:title="截图"/>
-
-    <item 
+    <item
+        android:id="@+id/it_screenshot"
+        android:title="截图"/>
+    <item
+        android:id="@+id/it_clearMaket"
+        android:title="清除图层"/>
+    <item
         android:id="@+id/it_normal"
-        android:title="普通模式"
-        />
-    <item 
+        android:title="普通模式"/>
+    <item
         android:id="@+id/it_follow"
-        android:title="跟随模式"
-        />
-    <item 
+        android:title="跟随模式"/>
+    <item
         android:id="@+id/it_compass"
-        android:title="罗盘模式"
-        />
-    <item 
+        android:title="罗盘模式"/>
+    <item
         android:id="@+id/it_normalmap"
-        android:title="普通地图"
-        />
-    <item 
+        android:title="普通地图"/>
+    <item
         android:id="@+id/it_satellitemap"
-        android:title="卫星地图"
-        />
-    
+        android:title="卫星地图"/>
+    <item
+        android:id="@+id/it_setGps"
+        android:title="GPS开关"/>
+    <item
+        android:id="@+id/it_back"
+        android:title="后台运行"/>
+    <item
+        android:id="@+id/it_exit"
+        android:title="退出应用"/>
 
-</menu> 
+</menu>
