--- a/res/layout/main_bottom.xml
+++ b/res/layout/main_bottom.xml
@@ -17,6 +17,7 @@
             android:id="@+id/id_tv_map"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="18sp"
             android:text="@string/map"
             android:textColor="#000000" 
             android:clickable="true"/>
@@ -33,6 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/step"
+            android:textSize="20sp"
             android:textColor="#008000"  
             android:clickable="true"/>
     </LinearLayout>
