--- a/res/layout/main_bottom.xml
+++ b/res/layout/main_bottom.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
-            android:text="@string/map"
+            android:text="@string/main_map"
             android:textColor="#000000" 
             android:clickable="true"/>
     </LinearLayout>
@@ -33,7 +33,7 @@
             android:id="@+id/id_tv_step"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/step"
+            android:text="@string/main_step"
             android:textSize="20sp"
             android:textColor="#008000"  
             android:clickable="true"/>
