--- a/res/layout/mobile_msg.xml
+++ b/res/layout/mobile_msg.xml
@@ -4,32 +4,6 @@
     android:layout_height="wrap_content"
     android:orientation="vertical" >
 
-    <!--
-         <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical" >
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="感光"
-            android:textColor="#7B7B7B"
-            android:textSize="15sp" />
-
-        <TextView
-            android:id="@+id/tv_light"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="0"
-            android:textColor="@android:color/holo_blue_light"
-            android:textSize="18sp" />
-    </LinearLayout>
-    -->
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -42,7 +16,7 @@
             android:gravity="center" 
             android:textColor="#7B7B7B"
             android:textSize="15sp" 
-            android:text="感光度变化(Lus-Time)  0"/>
+            android:text="@string/mobile_msg_tv_light"/>
     </LinearLayout>
 
     <com.zhenqianfan13354468.trackpedometer.ChartView
