--- a/res/layout/tab_fragment_step.xml
+++ b/res/layout/tab_fragment_step.xml
@@ -27,7 +27,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="0.0%"
+                android:text="@string/tab_fragment_step_tv_percent"
                 android:textColor="@android:color/holo_blue_bright"
                 android:textSize="20sp" />
 
@@ -49,7 +49,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="目标"
+                    android:text="@string/tab_fragment_step_goal"
                     android:textColor="#7B7B7B"
                     android:textSize="15sp" />
 
@@ -58,7 +58,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="10000"
+                    android:text="@string/tab_fragment_step_tv_goal"
                     android:textColor="@android:color/holo_blue_bright"
                     android:textSize="18sp" />
             </LinearLayout>
@@ -69,7 +69,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="0"
+            android:text="@string/tab_fragment_step_tv_step"
             android:textColor="@android:color/holo_blue_bright"
             android:textSize="50sp" />
 
@@ -84,7 +84,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@drawable/step_btn_background"
-                android:text="重置"
+                android:text="@string/tab_fragment_step_bt_reset"
                 android:textColor="@drawable/step_btn_color" />
 
             <Chronometer
@@ -103,7 +103,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@drawable/step_btn_background"
-                android:text="开始"
+                android:text="@string/tab_fragment_step_bt_control"
                 android:textColor="@drawable/step_btn_color" />
         </LinearLayout>
 
